--- a/pom.xml
+++ b/pom.xml
@@ -41,9 +41,9 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>org.jvnet.hudson.plugins</groupId>
+			<groupId>org.jenkins-ci.plugins</groupId>
 			<artifactId>email-ext</artifactId>
-			<version>2.7</version>
+			<version>2.18</version>
 			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
