--- a/pom.xml
+++ b/pom.xml
@@ -94,6 +94,13 @@
 			<version>0.10</version>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.jenkins-ci.plugins</groupId>
+			<artifactId>violations</artifactId>
+			<version>0.7.11</version>
+			<scope>compile</scope>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 
 	<scm>
