--- a/pom.xml
+++ b/pom.xml
@@ -101,6 +101,11 @@
 			<scope>compile</scope>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.jenkins-ci.plugins</groupId>
+			<artifactId>logfilesizechecker</artifactId>
+			<version>1.0</version>
+			<optional>true</optional></dependency>
 	</dependencies>
 
 	<scm>
