add jenkinsReleases repository

--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,20 @@
 			<optional>true</optional></dependency>
 	</dependencies>
 
+	<repositories>
+    		<repository>
+                <id>jenkinsReleases</id>
+                <name>jenkinsReleases</name>
+                <url>http://maven.jenkins-ci.org/content/repositories/releases/</url>
+                <releases>
+                     <enabled>true</enabled>
+                </releases>
+                <snapshots>
+                     <enabled>false</enabled>
+                </snapshots>
+                </repository>
+</repositories>
+
 	<scm>
 		<connection>scm:svn:https://svn.jenkins-ci.org/trunk/hudson/plugins/configurationslicing</connection>
 		<developerConnection>scm:svn:https://svn.jenkins-ci.org/trunk/hudson/plugins/configurationslicing</developerConnection>
