add missing plugin repo

--- a/pom.xml
+++ b/pom.xml
@@ -108,19 +108,12 @@
 			<optional>true</optional></dependency>
 	</dependencies>
 
-	<repositories>
-    		<repository>
-                <id>jenkinsReleases</id>
-                <name>jenkinsReleases</name>
-                <url>http://maven.jenkins-ci.org/content/repositories/releases/</url>
-                <releases>
-                     <enabled>true</enabled>
-                </releases>
-                <snapshots>
-                     <enabled>false</enabled>
-                </snapshots>
-                </repository>
-</repositories>
+	<pluginRepositories>
+		<pluginRepository>
+			<id>repo.jenkins-ci.org</id>
+			<url>http://repo.jenkins-ci.org/public/</url>
+		</pluginRepository>
+	</pluginRepositories>
 
 	<scm>
 		<connection>scm:svn:https://svn.jenkins-ci.org/trunk/hudson/plugins/configurationslicing</connection>
