--- a/pom.xml
+++ b/pom.xml
@@ -113,6 +113,12 @@
 			<id>repo.jenkins-ci.org</id>
 			<url>http://repo.jenkins-ci.org/public/</url>
 		</pluginRepository>
+
+
+		<pluginRepository>
+             <id>plugin-jenkinsReleases</id>
+             <url>http://maven.jenkins-ci.org/content/repositories/releases</url>
+		</pluginRepository>
 	</pluginRepositories>
 
 	<scm>
