--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,13 @@
 			<optional>true</optional></dependency>
 	</dependencies>
 
+	<repositories>
+  		<repository>
+        	<id>jenkinsReleases</id>
+            <url>http://maven.jenkins-ci.org/content/repositories/releases/</url>
+       	</repository>
+	</repositories>
+
 	<pluginRepositories>
 		<pluginRepository>
 			<id>repo.jenkins-ci.org</id>
